...
                app:flow_verticalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                app:cardBackgroundColor="#E6DFDF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/cardHour"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="75dp"
                    android:layout_marginTop="12dp"
                    android:hint="Lieu de la réunion"
                    android:textSize="17dp" />

                <Spinner
                    android:id="@+id/spinnerPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:inputType="text" />

            </androidx.cardview.widget.CardView>
...
                    android:clickable="true"
                    android:hint="Heure de la réunion"
                    android:inputType="time"
                    android:maxLength="2" />

                <Button
                    android:id="@+id/buttonHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="Choisir une heure" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="40dp"
                app:cardBackgroundColor="#E6DFDF"
...
                    android:clickable="true"
                    android:hint="Durée de la réunion"
                    android:inputType="time"
                    android:maxLength="2" />

                <Spinner
                    android:id="@+id/spinnerDuration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:inputType="text" />

            </androidx.cardview.widget.CardView>
...
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CardDuration">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Sujet de la réunion"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

...
                android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="textEmailAddress" />


...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <Button
                android:id="@+id/register_meeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:clickable="true"
                android:text="Programmer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailsListContainer" />

            <ImageButton
                android:id="@+id/saveEmail"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:backgroundTint="#E1D6D6"
                android:gravity="center"
                android:textColor="@color/teal_700"
...
