...
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Salles">Salles</string>
    <string name="Heure">Heures</string>
    <string name="Heures">Heures</string>
    <string name="Filtres">Filtres</string>
    <string name="filtres">Filtres</string>
    <string name="Clear">Clear</string>
</resources>
