<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.luck_art.lamzone.utils.meeting_list.MeetingListActivity"
    tools:drawable="@drawable/filter_icone">
    <item
        android:id="@+id/filtre"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/filter_icone"
        android:title="@string/filtres"
        android:visible="true"
        app:showAsAction="ifRoom">
...
